# TsunamiTrace

./: .gitignore  README.md  main_raytracing_sp.py  pyproject.toml  ray_tracing_test.py  raytracing.py  rt_rungekutta_sp.py  test_rk4.py
TsunamiTrace/: __init__.py  _rungekutta.py  analysis.py  io.py  raytracing.py
data/: 1964_slip_region.txt  CSZ_CA_coast.txt  CSZ_US_coast.txt  CSZ_max_def.txt  CSZ_trench.txt  NE_pacific_4arcmin.nc  cascadia.xyz
examples/: 01_ridge_refraction.ipynb  02_cascadia_travel_times.ipynb  03_alaska_point_vs_finite_fault.ipynb  04_DART_arrival_times.ipynb  05_CSZ_coastal_arrival_times.ipynb  06_Wailau_dispersive_rays.ipynb  alaska_point_vs_finite_fault.ipynb  cascadia_travel_times.ipynb  ridge_refraction.py
examples/.ipynb_checkpoints/: 04_DART_arrival_times-checkpoint.ipynb  05_CSZ_coastal_arrival_times-checkpoint.ipynb  06_Wailau_dispersive_rays-checkpoint.ipynb  alaska_point_vs_finite_fault-checkpoint.ipynb  cascadia_travel_times-checkpoint.ipynb  ridge_refraction-checkpoint.ipynb
tests/: refraction_snapshots.npz  test_refraction.py  test_rk4.py  test_trace_rays.py
