[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "TsunamiTrace"
version = "0.1.0"
description = "Tsunami ray tracing on a sphere using 4th-order Runge-Kutta integration"
readme = "README.md"
license = { file = "license.txt" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Repository = "https://github.com/dmelgarm/TsunamiTrace"

[tool.setuptools.packages.find]
where = ["."]
include = ["TsunamiTrace*"]
