[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "TsunamiTrace"
version = "0.1.0"
description = "Tsunami ray tracing on a sphere using 4th-order Runge-Kutta integration"
readme = "README.md"
license = { file = "license.txt" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev      = ["pytest"]
examples = ["scipy", "pandas"]

[project.urls]
Repository = "https://github.com/dmelgarm/TsunamiTrace"

[tool.setuptools.packages.find]
where = ["."]
include = ["TsunamiTrace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
